--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First Website</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght,YOPQ@100..900,300&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar">
@@ -41,8 +44,28 @@
                 <p>See what makes us different.</p>
                 <button class="main__btn"><a href="/">Get Started</a></button> 
             </div>
+            <div class="main__image--container">
+                <img src="images/pic2.svg" alt="pic" id="main__img">
+            </div>
         </div>
      </div>
+
+     <!-- Services Section -->
+      <div class="services">
+        <h1>See what the hype is about</h1>
+        <div class="services__container">
+            <div class="services__card">
+                <h2>Experience Bliss</h2>
+                <p>A.I. Powered Technology</p>
+                <button>Get Started</button>
+            </div>
+            <div class="services__card">
+                <h2>Are you ready?</h2>
+                <p>Take the leap</p>
+                <button>Get Started</button>
+            </div>
+        </div>
+      </div>
 
 
     <script src="app.js"></script>
